# proxmox-k3s-cluster

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  main.py  pyproject.toml
.continue/docs/: pulumiKubernetes.yaml  pyinfra.yaml
ansible/: .ansible-lint-ignore  Makefile  README.md  add-kured.yaml  add-linstor-affinity.yaml  add-piraeus.yaml  add-system-upgrade.yaml  first_playbook.yaml  init-cluster.yaml  inventory.yaml  uninstall-k3s.yaml
ansible/files/: kured-chart.txt  linstor-affinity-chart.txt
ansible/group_vars/k3s/: vars  vault
pulumi/: requirements.txt
pulumi/infra-apps/: Pulumi.yaml  README.md  __main__.py
pulumi/infra-bootstrap/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
pulumi/k3s/: Pulumi.yaml
pulumi/proxmox/: Pulumi.yaml  __main__.py
pyinfra/: Makefile  install_k3s.py  inventory.py  test.py  uninstall_k3s.py
pyinfra/files/: k3s_config.yaml
pyinfra/group_data/: all.py
pyinfra/group_data/k3s/: vault
